--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </div>
 
       <div class="col-lg-6 p-5 mt-5 mb- text-center test-lg-start"> 
-        <img class="img-fluid  zoomIn" src="img/hero.png" alt="">
+        <img class="img-fluid animated zoomIn" src="img/hero.png" alt="">
       </div>
     </div>
   </div>
