--- a/index.html
+++ b/index.html
@@ -755,6 +755,7 @@
        </div>
      </div>
    </div>
+ </div>
 
        <!--our team ends here-->
        <div class="container-xxl mt-5 text-white bg-primary  p-5   footer wow fadeIn" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
