animate added in nav bar button

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
           <span>$2.49</span>
           <small class="align-bottom fw-normal" style="font-size: 15px; line-height: 33px;">/ Mo</small>
         </h1>
-        <a class="btn btn-secondary  slideInLeft px-sm-5 py-sm-3"> Get started Now
+        <a class="btn btn-secondary animate slideInLeft px-sm-5 py-sm-3"> Get started Now
         </a>
       </div>
 
