--- a/index.html
+++ b/index.html
@@ -892,7 +892,17 @@
 
 
 
-
+$.ajax({
+   url: "https://github.com/sawangoswami/animate/blob/main/object.json",
+    type:"get",
+    dataType:'json',  
+    success: function(data){
+      console.log(data);
+    },
+    error:function() {
+      console.log("err");
+    }
+});
 
 
 
