--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@
 
 
 
-
+<script>
 
 $.ajax({
    url: "https://github.com/sawangoswami/animate/blob/main/object.json",
@@ -903,6 +903,8 @@ $.ajax({
       console.log("err");
     }
 });
+  
+  </script>
 
 
 
