--- a/index.html
+++ b/index.html
@@ -890,14 +890,13 @@
 
 
 
-<script>
-if($ == jQuery) {  
+<script> {  
   $.ajax({
      url: "https://github.com/sawangoswami/animate/blob/main/object.json",
       type:"get",
       dataType:'json',  
       success: function(data){
-        console.log(data);
+        console.log(data)
       },
       error:function() {
         console.log("err");
