--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@
           <script src="js/main.js"></script>
   <script> {  
   $.ajax({
-     url: "https://github.com/sawangoswami/animate/blob/main/object.text",
+     url: "object.text",
       type:"get",
       dataType:'text',  
       success: function(data){
