--- a/index.html
+++ b/index.html
@@ -827,14 +827,9 @@
                     10px"> All Right Reserved. Designed By
                         </p>
                         <a style="display: inline; font-size:;
-                    10px; cursor: pointer " >Psychoscientists
+                    10px; cursor: pointer " >Sawan Goswami
                         </a>
-                        <p style="display: inline; font-size:;
-                    10px">Distributed By
-                        </p>
-                        <a style="display: inline; font-size:;
-                    10px; cursor: pointer"> Psychoscientists
-                        </a>
+                        
                       </div>
                     </div>
                   </div>
