--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
                     10px;  cursor: pointer ;">© Your Site Name,
                       </a>
                         <p style="display: inline ; font-size:;
-                    10px"> All Right Reserved. Designed By
+                    10px"> All Right Reserved. Coded By
                         </p>
                         <a style="display: inline; font-size:;
                     10px; cursor: pointer " >Sawan Goswami
