--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
-
+  <meta property="og:title" content="How to Become an SEO Expert (8 Steps)" />
+ <meta property="og:description" content="Get from SEO newbie to SEO pro in 8 simple steps." />
+ <meta property="og:image" content="img/Safeimagekit-resized-img.jpg" />
   <!-- Favicon -->
   <link href="img/favicon.ico" rel="icon">
    <link rel="shortcut icon" href="http://sstatic.net/stackoverflow/img/favicon.ico"> 
