--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta content="" name="description">
   <meta property="og:title" content="How to Become an SEO Expert (8 Steps)" />
  <meta property="og:description" content="Get from SEO newbie to SEO pro in 8 simple steps." />
- <meta property="og:image" content="img/Safeimagekit-resized-img.jpg" />
+ <meta property="og:image"  itemprop="image" content="img/Safeimagekit-resized-img.jpg" />
   <!-- Favicon -->
   <link href="img/favicon.ico" rel="icon">
    <link rel="shortcut icon" href="http://sstatic.net/stackoverflow/img/favicon.ico"> 
